// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer - collapsed 1`] = `
Array [
  <div
    className="drawer"
  >
    <div
      className="drawer__contents"
    >
      <DrawerContents
        activeTab="How to use this"
      />
    </div>
  </div>,
  <div
    className="drawer__overlay"
    onClick={[MockFunction]}
  />,
]
`;

exports[`Drawer - expanded 1`] = `
Array [
  <div
    className="drawer drawer--visible"
  >
    <div
      className="drawer__contents"
    >
      <DrawerContents
        activeTab="How to use this"
      />
    </div>
  </div>,
  <div
    className="drawer__overlay drawer__overlay--visible"
    onClick={[MockFunction]}
  />,
]
`;
